force-app/main/default/objects/Yearly_Campaign__c/Yearly_Campaign__c.object-meta.xml
<CustomObject>
    <label>Yearly Campaign</label>
    <nameField>
        <label>Yearly Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yearly Campains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>