force-app/main/default/objects/Yearly_Campaign__c/fields/Expected_Pledges_Below_5k__c.field-meta.xml
<CustomField>
    <fullName>Expected_Pledges_Below_5k__c</fullName>
    <label>Expected Pledges Below 5k</label>
    <summarizedField>Pledge__c.Expected_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Pledge__c.Expected_Amount__c</field>
        <operation>lessThan</operation>
        <value>5000</value>
    </summaryFilterItems>
    <summaryForeignKey>Pledge__c.Yearly_Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>