force-app/main/default/objects/Yearly_Campaign__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This Checkbox is for Pledge to Reflect Pledge Status</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>