force-app/main/default/objects/Yearly_Campaign__c/fields/Total_Campaign_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Campaign_Amount__c</fullName>
    <inlineHelpText>Sum of all pledges for this campaign</inlineHelpText>
    <label>Total Campaign Amount</label>
    <summarizedField>Pledge__c.Amount__c</summarizedField>
    <summaryForeignKey>Pledge__c.Yearly_Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>