force-app/main/default/objects/Yearly_Campaign__c/fields/Total_Credit_Card_Pledges__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Card_Pledges__c</fullName>
    <label>Total Credit Card Pledges</label>
    <summarizedField>Pledge__c.Expected_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Pledge__c.Payment_Method__c</field>
        <operation>equals</operation>
        <value>Credit Card</value>
    </summaryFilterItems>
    <summaryForeignKey>Pledge__c.Yearly_Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>