force-app/main/default/objects/Yearly_Campaign__c/fields/Total_Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected_Amount__c</fullName>
    <label>Total Expected Amount</label>
    <summarizedField>Pledge__c.Expected_Amount__c</summarizedField>
    <summaryForeignKey>Pledge__c.Yearly_Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>